baml_language/crates/baml_ide/src/snapshots/baml_ide__listing__tests__list_namespace_items_llm.snap
---
source: crates/baml_ide/src/listing.rs
assertion_line: 664
expression: listing
---
class            llm.Config                       models.baml:2
function         llm.llm_identity                 models.baml:7
